# Python-File-Server

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  server.py
config/: pipeline.yaml
docker/: Dockerfile.cpu  Dockerfile.gpu
pipeline/: batch_runner.py  config.py  job.py  worker.py
pipeline/postprocess/: output.py
pipeline/preprocess/: garment.py  pose.py
pipeline/utils/: image.py
pipeline/vton/: base.py  fal_api.py  fashn_api.py  idm_vton.py  nano.py  ootdiffusion.py
scripts/: preprocess_poses.py  run_batch.py
tests/: conftest.py  test_adapter_contract.py  test_batch_runner.py  test_fal_adapter.py  test_garment_preprocess.py  test_garment_validation.py  test_nano_adapter.py  test_pose_cache.py  test_worker.py
