[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bioracer-vton-pipeline"
version = "0.1.0"
description = "AI virtual try-on pipeline for Bioracer cycling garments"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]
